Form -> Step1, Login
Interfaz Primera Vista del formulario terminada, Interfaz de Login terminada, Se crearon los hooks para la ruleta y el multi formulario

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,10 @@
     color: #260B01;
 }
 
+.font_inputs {
+    background-color:  #F2F0EB
+}
+
 /* Background Colors */
 .bg_white_card {
     background-color: #FCFCFC;
