--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -117,3 +117,19 @@
   background-color: #260b01; /* bg_brown */
   color: white;
 }
+
+
+@keyframes toast-progress {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0%;
+  }
+}
+
+.animate-toast-progress {
+  animation-name: toast-progress;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
